--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,10 @@ footer { margin-top: 28px; opacity: 0.8; display: flex; gap: 10px; align-items: 
   border: 2px solid #111;
 }
 
+.iowawarm__img{
+  transform: translate(-2px, 0px) scale(1.00);
+}
+
 @media (max-width: 800px){
   .hero{
     grid-template-columns: 1fr;
