--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@ footer { margin-top: 28px; opacity: 0.8; display: flex; gap: 10px; align-items: 
   place-items: center;
 }
 
+.tile.shift .tile__img{
+  transform: translate(-1px, 1px) scale(1.00);
+}
+
 .nexus__logo{
   color: white;
   font-weight: 500;
